    - In oarsub you can specify a job name ("-n" option).
    - In oarsub you can specify stdout and stderr file names.
    - User can resubmit a job (option "--resubmit" in oarsub).
    - It is possible to specify a read only database account and it will be used to evaluate SQL properties given by the user with the oarsub command (more scecure).

version 1.6.1:
--------------
    - initialise the "ganttJobsPrediction" table with a right reference date (1970-01-01 00:00:01)
    - oarsub has the "-k, --checkpoint" option. It specifies the number of seconds before job walltime to send a SIGUSR2 on it.
    - You can see the list of events for jobs with -f option in oarstat
    - oardel can now send SIGUSR2 to the oarexec of a job (-c option)
    - oardel can now delete several jobs
    - Add a signal handler in oarexec and propagate this signal to the user process
    - Support '#OAR -p ...' options in user script
    - Add in oar.conf the possibility to specify a different timeout for prologue and epilogue (PROLOGUE_EPILOGUE_TIMEOUT)
    - when a connection to the DB fails, OAR retrie 5 times
    - handle the EXTERMINATE_JOB event and suspect all nodes if possible
    - add job state log table
    - add node properties log table
    - add possibility to use sentinelle.rb script in the ping_checker module
    - add a GRID5000 specific scheduler which implements specific policy
      (oar_sched_gant_g5k)
    - add -s option to oarnodes command --> show only state of nodes
    - add -l option to oarnodes command --> show only the node list
    - root can now delete any jobs in the same way the oar user could
    - change a few oardel messages
    - limit the commands (with arguments) specified by users::

        regular expression : [\w\s\/\.\-]*

    - change oaremovenode command to oarremovenode
    - enhance job error management
    - enhance suspicious nodes detection
    - fix bugs about accounting

version 1.6:
------------