@@ -2643,6 +2643,11 @@ SCHEDULER_JOB_SECURITY_TIME = 1
 SCHEDULER_GANTT_HOLE_MINIMUM_TIME = 300
 </pre>
 </li>
+<li><p class="first">You can add an order preference on resource assigned by the system(SQL ORDER syntax):</p>
+<pre class="literal-block">
+SCHEDULER_RESOURCE_ORDER = switch ASC, node DESC, resource_id ASC
+</pre>
+</li>
 <li><p class="first">Indicate the name of the database field that contains the cpu number of the node.
 If this option is set then users must use <a class="reference" href="#oarsh">OARSH</a> instead of ssh to walk on each nodes that they have reserved via oarsub.</p>
 <pre class="literal-block">
@@ -2831,6 +2836,8 @@ with all modules.</p>
 <li><p class="first">User can resubmit a job (option &quot;--resubmit&quot; in oarsub).</p>
 </li>
 <li><p class="first">It is possible to specify a read only database account and it will be used to evaluate SQL properties given by the user with the oarsub command (more scecure).</p>
+</li>
+<li><p class="first">Add possibility to order assigned resources with their properties by the scheduler. So you can privilege some resources than others (SCHEDULER_RESOURCE_ORDER tag in oar.conf file)</p>
 </li>
 </ul>
 </blockquote>
@@ -3056,7 +3063,7 @@ This variable specifies the node where OAR will be connected to submit a job in 
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="OAR-DOCUMENTATION.rst">View document source</a>.
-Generated on: 2006-06-29 16:41 UTC.
+Generated on: 2006-06-30 15:28 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
