@@ -64,7 +64,7 @@ my $Exit_code = 0;
 my $base = iolib::connect();
 
 #do it for all job in state LEON in the data base table fragJobs
-iolib::lock_table($base,["jobs","job_state_logs","resources","assigned_resources","frag_jobs","resource_state_logs","resource_properties","event_logs","moldable_job_descriptions","job_types","job_resource_descriptions","job_resource_groups","challenges","job_dependencies"]);
+iolib::lock_table($base,["jobs","job_state_logs","resources","assigned_resources","frag_jobs","resource_state_logs","resource_properties","event_logs","moldable_job_descriptions","job_types","job_resource_descriptions","job_resource_groups","challenges","job_dependencies","gantt_jobs_predictions"]);
 
 foreach my $j (iolib::get_to_kill_jobs($base)){
     if (iolib::is_job_desktop_computing($base,$j->{job_id})) {
