@@ -118,6 +118,9 @@ SCHEDULER_JOB_SECURITY_TIME = 1
 # Minimum time in seconds that can be considered like a hole where a job could be scheduled in
 SCHEDULER_GANTT_HOLE_MINIMUM_TIME = 300
 
+# You can add an order preference on resource assigned by the system(SQL ORDER syntax)
+SCHEDULER_RESOURCE_ORDER = switch ASC, node DESC, resource_id ASC
+
 # Indicate the name of the database field that contains the cpu number of the node.
 # If this option is set then users must use oarsh instead of ssh to walk on each nodes that they have reserved via oarsub.
 # Look at Tools/oarsh/README
